set up hatch endpoint. testing on remote

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,8 @@
-Connect driver methods to express api
-Host express API & test all endpoints with postman
-
-Connect express API endpoint to github pages
-Test across RLES machines (open up ports/firewall)
-Write all endpoint on GH page, use forms as needed
+Write up GH page links/redirects/(ajax??)
+Make it as several buttons, some will pop up a form, have a window on the bottom for data dumping
+Connect all forms/buttons to appropriate API endpoint
+Dump all data calls in window
 Spruce up w/ CSS
 Authentication
-
+Finish writing postman calls
 Finish site book - write up all things you did yo go above and beyond
